# movies_sqlalchemy_fastapi

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  responses.py
alembic/: env.py
authentication/: app.py  authentication.py  database.py
commands/: run_migration.sh  run_web_server_dev.sh
config/: settings.py
controllers/: forms.py  headers.py  (+1 more)
src/: main.py  pyproject.toml  pytest.ini
src/alembic/: env.py
src/alembic/versions/: 0677ab0e59a9_initial_migration.py  41658363bfa9_initial_migration.py  43967bac186d_temp_migration.py  9e51f8ce76ea_movies_init_migration.py
src/apps/accounts/: auth.py  controllers.py  dependencies.py  exceptions.py  interfaces.py  notifications.py  repositories.py  routes.py  schemas.py  services.py  validators.py
src/apps/accounts/dto/: __init__.py  users.py
src/apps/accounts/email_templates/: __init__.py  registrations.py
src/apps/accounts/handlers/: file_handlers.py  files.py
src/apps/accounts/interfaces/: __init__.py  handlers.py  notifications.py  repositories.py  security.py  services.py
src/apps/accounts/notifications/: __init__.py  emails.py
src/apps/accounts/repositories/: __init__.py  profiles.py  tokens.py  users.py
src/apps/accounts/schemas/: __init__.py  profiles.py  tokens.py  users.py
src/apps/accounts/services/: __init__.py  accounts.py  auths.py
src/apps/accounts/validators/: __init__.py  files.py  profiles.py  users.py
src/apps/movies/: __init__.py  controllers.py  dependencies.py  routes.py  schemas.py
src/apps/movies/dto/: genre.py  movie.py
src/apps/movies/interfaces/: repositories.py  services.py
src/apps/movies/repositories/: genre.py  movie.py
src/apps/movies/schemas/: __init__.py  movies.py
src/apps/movies/services/: movies.py
src/cache/: __init__.py  connection.py  dto.py  exceptions.py  interfaces.py  managers.py  utils.py
src/config/: dependencies.py  settings.py
src/database/: session.py  session_test.py
src/database/data_processing/mappers/: csv_mapper.py
src/database/data_processing/movies/: cleaner.py  saver.py
src/database/exceptions/: movies.py
src/database/models/: accounts.py  movies.py
src/database/validators/: movies.py
src/tests/: conftest.py
src/tests/fakes/: fake_cache_manager.py  fake_email_sender.py  fake_movie_repository.py
src/tests/test_accounts/: test_controllers.py  test_services.py
src/tests/test_movies/: test_services.py
(+14 files in other folders)
