[tool.poetry]
name = "online movie theater"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Yuriy Okal <wspojoy2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiopg = "1.4.0"
aioredis = "2.0.1"
aiosmtplib = "3.0.2"
aiosqlite = "0.20.0"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "4.0.3"
asyncpg = "0.30.0"
bcrypt = "4.2.1"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dnspython = "2.7.0"
dulwich = "0.21.7"
email-validator = "2.2.0"
exceptiongroup = "1.2.2"
fastapi = "0.115.5"
fastapi-cli = "0.0.5"
fastjsonschema = "2.21.0"
filelock = "3.16.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.27.2"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
keyring = "24.3.1"
mako = "1.3.6"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
numpy = "2.1.3"
packaging = "24.2"
pandas = "2.2.3"
passlib = "1.7.4"
pexpect = "4.9.0"
pillow = "11.0.0"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
psycopg2-binary = "2.9.10"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyjwt = "2.10.0"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.17"
pytz = "2024.2"
pywin32-ctypes = "0.2.3"
pyyaml = "6.0.2"
rapidfuzz = "3.10.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
starlette-csrf = "3.0.0"
tomli = "2.2.1"
tomlkit = "0.13.2"
tqdm = "4.67.0"
trove-classifiers = "2024.10.21.16"
typer = "0.13.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.32.0"
virtualenv = "20.28.0"
watchfiles = "0.24.0"
websockets = "14.1"
zipp = "3.21.0"
pydantic-settings = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
